# mcplink

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  daemon.rs  detect.rs  main.rs  service.rs
src/renderers/: claude.rs  copilot.rs  cursor.rs  mod.rs  opencode.rs  vscode.rs  windsurf.rs
