[package]
name = "mcplink"
version = "0.1.1"
edition = "2021"
description = "Universal MCP config sync daemon"
repository = "https://github.com/pyrofast/agents-mcp"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
service-manager = "0.7"
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
